Updated my profile

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>David M</h1>
+
+<h3>Profile</h3>
+<ul>
+    <li>Started: 02/04/2023</li>
+    <li>Role: Analyst</li>
+    <li>Hobbies: AFL, Reading, and TV</li>
+</ul>
